# egui-svg

./: Cargo.toml  README.md
app-native/: Cargo.toml
app-native/src/: main.rs
egui-svg/: .gitignore  Cargo.toml
egui-svg-fonts/: Cargo.toml
egui-svg-fonts/assets/: OFL.txt
egui-svg-fonts/src/: lib.rs
egui-svg/assets/: index.html
egui-svg/examples/: demo.rs  simple.rs
egui-svg/src/: lib.rs  svg.rs
